fix(notification): align bell icon center (#4)

--- a/packages/notification/src/notification-modal/components/item.module.css
+++ b/packages/notification/src/notification-modal/components/item.module.css
@@ -56,7 +56,6 @@
 
 .transactionHash svg {
 	display: inline-block;
-	transform: translateY(18%);
 	margin: 0 2px 0 4px;
 }
 
